--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: auto;  
+  height: 100%;
+  overflow: auto;
 }
 
 ::-webkit-scrollbar {
