--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  margin: 0;
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; /* make scrollbar transparent */
+  display: none;
 }
